added scaled option for computing signatures

--- a/ui/narrative/methods/run_sourmash/display.yaml
+++ b/ui/narrative/methods/run_sourmash/display.yaml
@@ -39,6 +39,11 @@ parameters :
             Sketch Database
         short-hint : |
             Sketch Database
+    scaled :
+        ui-name : |
+            Scaled
+        short-hint : |
+            Effective compression ratio to make query signatures
 
 description : |
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pulvinar efficitur felis, quis tincidunt sem congue at. Vivamus ornare feugiat faucibus. Fusce tincidunt mattis nunc, nec varius purus convallis quis. Nulla facilisi. In at magna dolor. Suspendisse sit amet felis at arcu auctor dapibus vitae pharetra dui. Nam semper mi quis tortor fermentum mollis. Donec a arcu pharetra, rutrum dolor vitae, rutrum mauris. Donec ornare fringilla sagittis. Nam laoreet est in elementum malesuada. Vestibulum id mi eget urna hendrerit feugiat. Donec et ultrices nulla. Phasellus diam eros, dapibus at tempus nec, semper vel ante.</p>
